<resources>
    <string name="app_name">NewsBuzz</string>
    <string name="no_network_error">No Network</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="news_buzz">News Buzz</string>
    <string name="search">Search</string>
    <string name="description">description</string>
    <string name="title_of_the_headline">Title of the headline</string>
    <string name="title">Title</string>
    <string name="news">News</string>
    <string name="news_loading">News are loading</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="choose_category">Choose Category</string>
    <string name="all">All</string>
</resources>
