<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <RadioGroup
        android:id="@+id/rg_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/all"
            android:layout_marginBottom="@dimen/dp_5"/>

        <RadioButton
            android:id="@+id/rb_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/business"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_entertainment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/entertainment"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/general"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/health"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/science"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/sports"
            android:layout_marginBottom="@dimen/dp_5"/>
        <RadioButton
            android:id="@+id/rb_technology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/technology"
            android:layout_marginBottom="@dimen/dp_5"/>


    </RadioGroup>


</LinearLayout>